tests/paczka1/small_fuzzy/26782762.err
Error in line 3: l8uGMBtdugO S911 14,1
Error in line 11: ckpQvc0F A183 34,11
